tampil hasil di ui

--- a/CalculatorWithDI/app/build.gradle
+++ b/CalculatorWithDI/app/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     //Retrofit
     implementation("com.squareup.retrofit2:retrofit:$retrofit_version")
     implementation("com.squareup.retrofit2:converter-moshi:$moshi_version")
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+
+    //viewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0"
 
     //Coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
